2004-11-27  Nate Nielsen <nielsen@memberwebs.com>

	* plugins/gedit/seahorse-gedit.c: Selecting text in recipients dialog
	no longer causes plugin to forget earlier 'to encrypt' selection
	* plugins/gedit/Makefile.am:
	* plugins/gedit/seahorse-gedit.schemas.in: Enable gedit plugin by default
	
2004-11-22  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-gpgmex-util.c: 
	* configure.in: Only define strsep when needed
	* libseahorse/seahorse-pgp-source.c: Fix logic bug in seahorse_pgp_source_stop
	
2004-11-21  Nate Nielsen <nielsen@memberwebs.com>

	* plugins/gedit/seahorse-gedit.c: Bring gedit plugin in sync with 
	prior refactoring changes. 
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-default-key-control.c:
	* libseahorse/seahorse-key-store.c:
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-multi-source.c:
	* libseahorse/seahorse-multi-source.h:
	* libseahorse/seahorse-recipients.c:
	* libseahorse/seahorse-recipients-store.c:
	* libseahorse/seahorse-recipients-store.h:
	* libseahorse/seahorse-signatures.c:
	* src/main.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager-store.c:
	* src/seahorse-key-manager-store.h: Refactor key sources and their
	use instead of the context for tracking and listing keys. (bug# 158882)
	
2004-11-20  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/Makefile.am: Fix broken build
	
2004-11-12  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-util.h:
	* libseahorse/seahorse-vfs-data.c: Add seahorse_util_wait_until
	macro so we can use it elsewhere
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-pgp-source.c: Use a generic operation method
	for keeping track of asynchronous actions
	
2004-11-11  Nate Nielsen <nielsen@memberwebs.com>
	
	* data/seahorse.schemas.in:
	* libseahorse/Makefile.am: