@@ -4,6 +4,8 @@
 	no longer causes plugin to forget earlier 'to encrypt' selection
 	* plugins/gedit/Makefile.am:
 	* plugins/gedit/seahorse-gedit.schemas.in: Enable gedit plugin by default
+	* libseahorse/seahorse-key-source.c:
+	* libseahorse/seahorse-multi-source.c: Fix double free of GPGME context
 	
 2004-11-22  Nate Nielsen <nielsen@memberwebs.com>
 
